fix paragraph width on mobile

--- a/src/components/Sections/featured-section.scss
+++ b/src/components/Sections/featured-section.scss
@@ -67,6 +67,8 @@
             align-items: center !important;
             text-align: center !important;
             height: auto !important;
+        }
+        .fs-paragraph {
             width: calc(7 / 10 * 100vw) !important;
         }
         .revHiddenBreak {
